force-app/main/default/objects/Metadata__c/Metadata__c.object-meta.xml
<CustomObject>
    <label>Metadata</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Metadata Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metadata</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>