force-app/main/default/objects/Metadata__c/fields/Change_Summary__c.field-meta.xml
<CustomField>
    <fullName>Change_Summary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Change Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>