force-app/main/default/objects/Metadata__c/fields/Code_Review_Summary__c.field-meta.xml
<CustomField>
    <fullName>Code_Review_Summary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Code Review Summary</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>