force-app/main/default/objects/Metadata__c/fields/Metadata_Type__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Metadata Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>